<resources>
    <string name="app_name">News</string>
    <string name="sign_in">SIGN IN</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Login</string>
    <string name="title">title</string>
    <string name="name">name</string>
    <string name="author">author</string>
    <string name="published">published</string>
    <string name="view_in_browser">view in browser</string>
    <string name="description">description</string>
    <string name="search">Search</string>

</resources>